--- a/frontend/src/Components/App.css
+++ b/frontend/src/Components/App.css
@@ -1,60 +1,73 @@
-.header{
+.header {
   background-color: rgb(219, 215, 215);
 }
 
-.logo{
+.logo {
   font-size: 20px;
   font-weight: bold;
 }
 
-.category{
-  width:fit-content;
+.category {
+  width: fit-content;
 }
 
-.form_style{
+.form_style {
   background-color: rgb(235, 231, 231);
   border-radius: 2px;
+  border-radius: 10px;
 }
 
-.question_card{
+.question_card {
   background-color: rgb(235, 231, 231);
 }
 
-.buttonColor{
+.buttonColor {
   background-color: rgb(56, 134, 56);
 }
 
-.title_font{
+.title_font {
   font-size: 30px;
   color: rgb(29, 80, 63);
   font-weight: bolder;
 }
 
-.question_font{
+.question_font {
   font-size: 25px;
   font-weight: bold;
 }
 
-.question_box{
+.question_box {
   background-color: rgb(235, 231, 231);
 }
 
-.answer_font{
+.answer_font {
   font-size: 20px;
-  font-weight:bold;
+  font-weight: bold;
 }
 
-.answer_box{
+.answer_box {
   background-color: rgb(219, 215, 215);
   border-radius: 10px;
   width: 80%;
 }
 
-.nameOfPerson{
+.nameOfPerson {
   font-size: 15px;
-  font-weight:bolder;
+  font-weight: bolder;
   padding-top: 10px;
   color: green;
 }
 
+.loading_text {
+  font-size: 45px;
+  color: rgb(128, 26, 0);
+  margin: 20px;
+  margin-left: auto;
+}
 
+.no_answer {
+  font-size: 45px;
+  color: rgb(10, 105, 26);
+  text-align: center;
+  font-weight: bold;
+}
