--- a/frontend/src/Components/App.css
+++ b/frontend/src/Components/App.css
@@ -7,6 +7,17 @@
   font-weight: bold;
 }
 
+.ask_button{
+  display: flex;
+  justify-content:space-between;
+}
+
+.text{
+ font-size: 30px;
+ margin-top: 30px;
+ font-weight:bold;
+}
+
 .category {
   width: fit-content;
 }
