--- a/frontend/src/Components/App.css
+++ b/frontend/src/Components/App.css
@@ -136,3 +136,10 @@
 	font-weight: bold;
 	color: rgb(131, 131, 131);
 }
+
+.date-main{
+	font-size: 20px;
+	font-weight: bold;
+	color: rgb(131, 131, 131);
+	padding-bottom: 10px;
+}
