add all filtering

--- a/frontend/src/Components/App.css
+++ b/frontend/src/Components/App.css
@@ -1,5 +1,22 @@
+body{
+	margin: 0px 0px;
+	padding: 0px 0px;
+}
+
+.navbar{
+	display: flex;
+	justify-content: space-around;
+
+}
+
 .header {
 	background-color: rgb(219, 215, 215);
+	width: 100%;
+}
+
+img{
+	width: 50px;
+	height: 40px;
 }
 
 .logo {
@@ -44,6 +61,15 @@
 	cursor: pointer;
 }
 
+.ask_button{
+	border-radius: 8px;
+	border-color: white;
+	font-size: 18px;
+	font-weight: bold;
+	color: white;
+	background-color: #0095ff;
+	padding:4px 4px;
+}
 
 .button{
 	border-radius: 8px;
@@ -60,6 +86,22 @@
     border-radius: 8px;
     background-color: #065794;
     color: white;
+}
+
+.dropDown_category{
+	border-radius: 8px;
+	border-color: white;
+	font-size: 18px;
+	font-weight: bold;
+	color: white;
+	padding: auto auto;
+}
+
+.search_mainPage{
+	margin-top: 20px;
+    margin-right: 20px;
+	width: 300px;
+	border: 3px solid rgb(73, 102, 231);
 }
 
 
