--- a/frontend/src/Components/App.css
+++ b/frontend/src/Components/App.css
@@ -3,15 +3,10 @@ body{
 	padding: 0px 0px;
 }
 
-.navbar{
-	display: flex;
-	justify-content: space-around;
-
-}
-
 .header {
 	background-color: rgb(219, 215, 215);
 	width: 100%;
+	margin-right: auto;
 }
 
 img{
@@ -92,9 +87,26 @@ img{
 	border-radius: 8px;
 	border-color: white;
 	font-size: 18px;
+	margin-top: 26px;
+	margin-right: 150px;
+	margin-left: -100px;
+	padding: 15px 5px;
+	font-size: 18px;
 	font-weight: bold;
 	color: white;
-	padding: auto auto;
+	background-color: rgb(150, 158, 231);
+}
+
+.has_NoAnswer{
+	border-radius: 8px;
+	border-color: white;
+	margin-top: 26px;
+	margin-right: 100px;
+	padding: 5px 5px;
+	font-size: 18px;
+	font-weight: bold;
+	color: white;
+	background-color: rgb(150, 158, 231);
 }
 
 .search_mainPage{
