--- a/frontend/src/Components/App.css
+++ b/frontend/src/Components/App.css
@@ -1,6 +1,8 @@
 body {
   margin: 0px 0px;
   padding: 0px 0px;
+  background-color: #323232
+  ;
 }
 
 img {
@@ -20,7 +22,7 @@ label{
 .header {
   display: flex;
   flex-flow: wrap;
-  background-color: #DCDCDC;
+  background-color:#ff0000	;
   width: 100%;
   margin-right: auto;
 }
@@ -73,7 +75,7 @@ label{
 }
 
 .question_card {
-  background-color: rgb(235, 231, 231);
+  background-color:#fff;
   margin-top: 20px;
   padding-top: 30px;
 }
