--- a/frontend/src/Components/Page.css
+++ b/frontend/src/Components/Page.css
@@ -10,18 +10,20 @@
   color: #2F4F4F;
 }
 .pagination > li > a{
-  border: 1px solid #800000 ;
+  border: 1px solid #e5e500
+  ;
   padding: 5px 10px;
   outline: none;
   cursor: pointer;
 }
 .pagination > .active > a, .pagination > .active > span, .pagination > .active > a:hover, .pagination > .active > span:hover, .pagination > .active > a:focus, .pagination > .active > span:focus{
   background-color: #FFDAB9 ;
-  border-color: #800000;
+  border-color: #2F4F4F;
   outline: none ;
 }
 .pagination > li > a, .pagination > li > span{
-  color: #800000
+  color: #e5e500
+
 }
 .pagination > li:first-child > a, .pagination > li:first-child > span, .pagination > li:last-child > a, .pagination > li:last-child > span{
   border-radius: unset
