--- a/frontend/src/Components/App.css
+++ b/frontend/src/Components/App.css
@@ -231,12 +231,16 @@ label.title_font:hover {
 }
 
 .date-main {
-  font-size: 20px;
+  font-size: 15px;
   font-weight: bold;
   color: rgb(131, 131, 131);
   padding-bottom: 10px;
 }
-
+.view{
+  font-size: 15px;
+  color: rgb(57, 55, 55);
+  padding-left: 90%;
+}
 @media only screen and (min-width:1000px){ 
   .search_mainPage{
     width: 300px;
