move loading center

--- a/frontend/src/Components/Loader.css
+++ b/frontend/src/Components/Loader.css
@@ -1,3 +1,8 @@
+.big {
+  margin-top: 200px;
+
+}
+
 .lds-roller {
     display: inline-block;
     position: relative;
@@ -16,7 +21,7 @@
     width: 7px;
     height: 7px;
     border-radius: 50%;
-    background: #FFDEAD;
+    background: #FF4500;
     margin: -4px 0 0 -4px;
   }
   .lds-roller div:nth-child(1) {
