--- a/frontend/src/Components/App.css
+++ b/frontend/src/Components/App.css
@@ -281,7 +281,11 @@ label.title_font:hover {
   color: #065794;
   cursor: pointer;
 }
-
+.view{
+  font-size: 15px;
+  color: rgb(57, 55, 55);
+  padding-left: 90%;
+}
 @media only screen and (min-width:1000px){ 
   .search_mainPage{
     width: 300px;
