--- a/frontend/src/Components/App.css
+++ b/frontend/src/Components/App.css
@@ -78,6 +78,9 @@ label{
   background-color:rgb(228, 228, 228);
   margin-top: 20px;
   padding-top: 30px;
+  width: 100%;
+  height: 50vh;
+  overflow:auto;
 }
 
 .ask_button {
@@ -169,7 +172,7 @@ label.title_font:hover {
   font-size: 25px;
   font-weight: bold;
   color: rgb(53, 47, 47);
-  overflow: scroll;
+  overflow: auto;
 }
 
 .title_Answer {
@@ -211,7 +214,7 @@ label.title_font:hover {
   background-color: rgb(235, 231, 231);
   border-radius: 10px;
   width: 80%;
-  overflow:scroll;
+  overflow:auto;
 }
 
 .nameOfPerson {
@@ -266,7 +269,9 @@ label.title_font:hover {
   color: #7e898d;
   border-bottom: 1px solid rgb(200, 198, 198);
   margin-top: 4px;
-  overflow:scroll;
+  width: 100%;
+  height: 20vh;
+  overflow:auto;
 }
 
 .title_comment{
