--- a/frontend/src/Components/App.css
+++ b/frontend/src/Components/App.css
@@ -138,6 +138,10 @@ label {
 
 .search_mainPage {
   border: 1px solid rgb(255, 244, 241);
+  width: 180px;
+  padding:5px 5px;
+  border-radius: 10px;
+  background-color: rgb(250, 250, 250);
 }
 
 .title_font {
@@ -291,11 +295,7 @@ label.title_font:hover {
   color: rgb(57, 55, 55);
   padding-left: 90%;
 }
-@media only screen and (min-width: 600px) {
-  .search_mainPage {
-    width: 300px;
-  }
-
+@media only screen and (min-width: 500px) and (max-width : 799px){
   .header {
     display: flex;
     background-color: #efefef;
@@ -304,16 +304,66 @@ label.title_font:hover {
   }
 
   .header_button {
-    padding-top: 22px;
+    padding-top: 8px;
+    margin-right:35px;
+    font-size: 18px;
+  }
+
+  .askbtn{
+    text-decoration: none;
+  }
+
+  .margin_headerBtn{
+    margin-left:auto;
+    margin-right: auto;
+    padding: 5px 5px;
+    justify-content: space-around;
+    display: flex;
+  }
+  .search_mainPage {
+    border: 1px solid rgb(255, 244, 241);
+    width: 300px;
+    margin-left:200px;
+    padding:5px 5px;
+    border-radius: 10px;
+    background-color: rgb(250, 250, 250);
+  }
+}
+
+@media only screen and (min-width: 800px) {
+  .search_mainPage {
+    width: 300px;
+  }
+  .header {
+    display: flex;
+    background-color: #efefef;
+    width: 100%;
+    margin-right: auto;
+  }
+
+  .header_button {
+    padding-top: 5px;
     margin-right:35px;
     font-size: 15px;
   }
 
-  .header_button:hover {
+   .header_button:hover {
     color: #ed4343;
     border-top: 10px solid #ed4343;
-  }
+  } 
 
+  .askbtn{
+    margin-top:17px;
+    text-decoration: none;
+  }
+  .search_mainPage {
+    border: 1px solid white;
+    width: 290px;
+    padding:5px 5px;
+    border-radius: 10px;
+    margin-left: 40px;
+    background-color: rgb(250, 250, 250);
+  }
   .text {
     font-size: 30px;
   }
@@ -323,44 +373,9 @@ label.title_font:hover {
     text-align: center;
     padding: 6px 5px;
   }
-  .search_mainPage {
-    width: 500px;
-    margin-left: 20%;
-    margin-right: auto;
-  }
+  
   img {
     margin-left: 10%;
   }
-  .dropbtn {
-    padding: 16px;
-    font-size: 16px;
-    border: none;
-    cursor: pointer;
-  }
   
-  .dropdown {
-    position: relative;
-    display: inline-block;
-  }
-  
-  .dropdown-content {
-    display: none;
-    position: absolute;
-    right: 0;
-    background-color: #f9f9f9;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    z-index: 1;
-  }
-  
-  .dropdown-content option{
-    color: black;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-    cursor: pointer;
-  }
-.dropdown-content option:hover {background-color: #f1f1f1;}
-.dropdown:hover .dropdown-content {display: block;}
-.dropdown:hover .dropbtn {background-color: #3e8e41;}
 }
