--- a/frontend/src/Components/App.css
+++ b/frontend/src/Components/App.css
@@ -42,6 +42,7 @@ label {
 .logo {
   font-size: 20px;
   font-weight: bold;
+  color:#a31607;
 }
 
 .ask_button {
@@ -114,10 +115,10 @@ label {
   color: black;
   font-weight: bold;
   font-size: small;
+  color:#a31607;
 }
 
 .header_button:hover {
-  color: white;
   border-top: 10px solid #ed4343;
 }
 
@@ -323,7 +324,7 @@ label.title_font:hover {
   .search_mainPage {
     border: 1px solid rgb(255, 244, 241);
     width: 300px;
-    margin-left:200px;
+    margin-left:40px;
     padding:5px 5px;
     border-radius: 10px;
     background-color: rgb(250, 250, 250);
@@ -364,6 +365,7 @@ label.title_font:hover {
     margin-left: 40px;
     background-color: rgb(250, 250, 250);
   }
+  
   .text {
     font-size: 30px;
   }
@@ -378,4 +380,15 @@ label.title_font:hover {
     margin-left: 10%;
   }
   
+}
+
+@media only screen and (min-width: 1100px){
+  .search_mainPage {
+    border: 1px solid white;
+    width: 450px;
+    padding:5px 5px;
+    border-radius: 10px;
+    margin-left: 40px;
+    background-color: rgb(250, 250, 250);
+  }
 }
