--- a/frontend/src/Components/App.css
+++ b/frontend/src/Components/App.css
@@ -114,12 +114,14 @@ label {
 .header_button {
   color: black;
   font-weight: bold;
-  font-size: small;
+  font-size: smaller;
   color:#a31607;
+  display: contents;
 }
 
 .header_button:hover {
   border-top: 10px solid #ed4343;
+  text-decoration: none;
 }
 
 .pagination_button {
@@ -297,35 +299,33 @@ label.title_font:hover {
   padding-left: 90%;
 }
 @media only screen and (min-width: 500px) and (max-width : 799px){
+  
   .header {
     display: flex;
     background-color: #efefef;
-    width: 100%;
-    margin-right: auto;
   }
 
   .header_button {
     padding-top: 8px;
-    margin-right:35px;
-    font-size: 18px;
+    margin-right:5px;
+    font-size: 12px;
+    display: block;
   }
 
   .askbtn{
     text-decoration: none;
+    padding-top: 20px;
+    font-weight: bold;
   }
 
   .margin_headerBtn{
-    margin-left:auto;
-    margin-right: auto;
-    padding: 5px 5px;
+    padding: 5px 5px; 
     justify-content: space-around;
     display: flex;
   }
   .search_mainPage {
     border: 1px solid rgb(255, 244, 241);
-    width: 300px;
-    margin-left:40px;
-    padding:5px 5px;
+    width: 150px;
     border-radius: 10px;
     background-color: rgb(250, 250, 250);
   }
@@ -346,6 +346,7 @@ label.title_font:hover {
     padding-top: 5px;
     margin-right:35px;
     font-size: 15px;
+    display: block;
   }
 
    .header_button:hover {
@@ -377,7 +378,7 @@ label.title_font:hover {
   }
   
   img {
-    margin-left: 10%;
+    margin-left:1%;
   }
   
 }
