--- a/frontend/src/Components/App.css
+++ b/frontend/src/Components/App.css
@@ -2,6 +2,7 @@ body {
   margin: 0px 0px;
   padding: 0px 0px;
   background-color: transparent;
+  
 }
 
 img {
@@ -16,6 +17,10 @@ i {
 
 label {
   margin: 0px 0px;
+}
+
+select{
+  font-size: small;
 }
 
 .header {
@@ -50,6 +55,14 @@ label {
   justify-content: space-between;
 }
 
+.Questions_amount{
+  color:#8b1609;
+  font-size: 30px;
+  padding-top: 35px;
+  font-weight: bolder;
+  font-family: 'Bebas Neue', cursive;
+}
+
 .text {
   font-size: 15px;
   margin-top: 30px;
@@ -61,9 +74,10 @@ label {
   font-size: 20px;
   font-weight: bold;
   text-align: center;
-  background-color: rgb(150, 158, 231);
+  background-color:#5a1d17;
   padding-bottom: 5px;
   padding-top: 5px;
+  color: white;
 }
 
 .form_style {
@@ -147,10 +161,11 @@ label {
   background-color: rgb(250, 250, 250);
 }
 
-.title_font {
+.title_font{
   font-size: 30px;
-  color: rgb(32, 23, 138);
+  color: rgb(216, 63, 36);
   font-weight: bolder;
+  margin-left: 10px;
 }
 
 .question_needs_answer {
@@ -300,6 +315,10 @@ label.title_font:hover {
 }
 @media only screen and (min-width: 500px) and (max-width : 799px){
   
+  select{
+    font-size: 15px;
+  }
+
   .header {
     display: flex;
     background-color: #efefef;
@@ -316,6 +335,7 @@ label.title_font:hover {
     text-decoration: none;
     padding-top: 20px;
     font-weight: bold;
+    font-size: 15px;
   }
 
   .margin_headerBtn{
@@ -355,8 +375,9 @@ label.title_font:hover {
   } 
 
   .askbtn{
-    margin-top:17px;
+    margin-top:15px;
     text-decoration: none;
+    font-size: 15px;
   }
   .search_mainPage {
     border: 1px solid white;
@@ -365,6 +386,9 @@ label.title_font:hover {
     border-radius: 10px;
     margin-left: 40px;
     background-color: rgb(250, 250, 250);
+  }
+  select{
+    font-size: 15px;
   }
   
   .text {
@@ -391,5 +415,16 @@ label.title_font:hover {
     border-radius: 10px;
     margin-left: 40px;
     background-color: rgb(250, 250, 250);
+  }
+  select{
+    font-size: 18px;
+  }
+  .askbtn{
+    margin-top:15px;
+    text-decoration: none;
+    font-size: 18px;
+  }
+  .askbtn:hover{
+    text-decoration: none;
   }
 }
