--- a/frontend/src/Components/App.css
+++ b/frontend/src/Components/App.css
@@ -369,6 +369,15 @@ label.title_font:hover {
     border-radius: 10px;
     background-color: rgb(250, 250, 250);
   }
+  .title_font{
+    font-size: 25px;
+  }
+  .Questions_amount{
+    margin-left: 80px;
+  }
+  .dataTime_container{
+    margin-left: 30px;
+  }
 }
 
 @media only screen and (min-width: 800px) {
@@ -424,7 +433,15 @@ label.title_font:hover {
   img {
     margin-left:1%;
   }
-  
+  .title_font{
+    font-size: 25px;
+  }
+  .Questions_amount{
+    margin-left: 80px;
+  }
+  .dataTime_container{
+    margin-left: 25px;
+  }
 }
 
 @media only screen and (min-width: 1100px){
@@ -447,4 +464,8 @@ label.title_font:hover {
   .askbtn:hover{
     text-decoration: none;
   }
+  .Questions_amount{
+    margin-left:100px;
+  }
+  
 }
