--- a/frontend/src/Components/App.css
+++ b/frontend/src/Components/App.css
@@ -2,7 +2,6 @@ body {
   margin: 0px 0px;
   padding: 0px 0px;
   background-color: transparent;
-  
 }
 
 img {
@@ -19,7 +18,7 @@ label {
   margin: 0px 0px;
 }
 
-select{
+select {
   font-size: small;
 }
 
@@ -33,11 +32,28 @@ select{
 .search_mainPage {
   border: 1px solid rgb(255, 244, 241);
   width: 180px;
-  padding:5px 5px;
+  padding: 5px 5px;
   border-radius: 10px;
   background-color: rgb(250, 250, 250);
 }
-
+.secondPage_header{
+  background-color: #efefef;
+  padding: 10px 5px;
+}
+.logo {
+  font-size: 20px;
+  font-weight: bold;
+  color: #66180f;
+  padding: 2px 2px;
+  margin-right: 10px;
+}
+.secondPage_search{
+  border: 1px solid rgb(255, 244, 241);
+  width: 200px;
+  border-radius: 10px;
+  padding-left: auto;
+  background-color: rgb(250, 250, 250);
+}
 .plain_header {
   display: flex;
   flex-flow: wrap;
@@ -50,11 +66,7 @@ select{
   color: rgb(59, 75, 221);
 }
 
-.logo {
-  font-size: 20px;
-  font-weight: bold;
-  color:#a31607;
-}
+
 
 .ask_button {
   display: flex;
@@ -71,12 +83,12 @@ select{
   padding: 4px 4px;
 }
 
-.Questions_amount{
-  color:#8b1609;
+.Questions_amount {
+  color: #8b1609;
   font-size: 30px;
   padding-top: 35px;
   font-weight: bolder;
-  font-family: 'Bebas Neue', cursive;
+  font-family: "Bebas Neue", cursive;
   margin-left: 20px;
 }
 
@@ -90,14 +102,14 @@ select{
   height: 300px;
 }
 
-.title_font{
+.title_font {
   font-size: 15px;
   color: rgb(216, 63, 36);
   font-weight: bolder;
   margin-left: 10px;
   padding-top: 5px;
-  overflow:auto;
-  height:50px;
+  overflow: auto;
+  height: 50px;
 }
 
 .question_font {
@@ -106,7 +118,7 @@ select{
   color: rgb(109, 10, 10);
   overflow: auto;
   margin-left: 10px;
-  height:100px;
+  height: 100px;
 }
 
 .has_answers {
@@ -134,7 +146,7 @@ select{
   margin-right: 2px;
 }
 
-.No_view{
+.No_view {
   font-size: 13px;
   font-weight: bold;
   margin-left: 10px;
@@ -146,10 +158,10 @@ select{
   color: rgb(66, 8, 8);
 }
 
-.dataTime_container{
-  margin-left:2px;
+.dataTime_container {
+  margin-left: 2px;
 }
-.view_container{
+.view_container {
   display: flex;
   flex-direction: column;
   height: 8px;
@@ -165,7 +177,7 @@ select{
   font-size: 20px;
   font-weight: bold;
   text-align: center;
-  background-color:#5a1d17;
+  background-color: #5a1d17;
   padding-bottom: 5px;
   padding-top: 5px;
   color: white;
@@ -179,7 +191,6 @@ select{
 .Answer_form {
   margin-top: 100px;
 }
-
 
 .button {
   border-radius: 8px;
@@ -198,11 +209,11 @@ select{
   color: white;
 }
 
-.header_button{
+.header_button {
   color: black;
   font-weight: bold;
   font-size: smaller;
-  color:#a31607;
+  color: #a31607;
   display: contents;
 }
 
@@ -230,7 +241,6 @@ select{
   text-decoration: none;
 }
 
-
 .question_needs_answer {
   font-size: 30px;
   color: rgb(32, 23, 138);
@@ -252,8 +262,6 @@ label.title_font:hover {
   color: blue;
   cursor: pointer;
 }
-
-
 
 .title_Answer {
   font-size: 30px;
@@ -312,7 +320,6 @@ label.title_font:hover {
   margin-left: auto;
 }
 
-
 .comment {
   font-weight: bold;
   color: #7e898d;
@@ -336,9 +343,8 @@ label.title_font:hover {
   cursor: pointer;
 }
 
-@media only screen and (min-width: 500px) and (max-width : 799px){
-  
-  select{
+@media only screen and (min-width: 500px) and (max-width: 799px) {
+  select {
     font-size: 15px;
   }
 
@@ -349,20 +355,22 @@ label.title_font:hover {
 
   .header_button {
     padding-top: 8px;
-    margin-right:5px;
+    margin-right: 5px;
     font-size: 12px;
     display: block;
   }
 
-  .askbtn{
+  .askbtn {
     text-decoration: none;
     padding-top: 20px;
     font-weight: bold;
     font-size: 15px;
   }
-
-  .margin_headerBtn{
-    padding: 5px 5px; 
+  img{
+    margin-left:4%;
+  }
+  .margin_headerBtn {
+    padding: 5px 5px;
     justify-content: space-around;
     display: flex;
   }
@@ -372,14 +380,31 @@ label.title_font:hover {
     border-radius: 10px;
     background-color: rgb(250, 250, 250);
   }
-  .title_font{
+  .title_font {
     font-size: 25px;
   }
-  .Questions_amount{
+  .Questions_amount {
     margin-left: 80px;
   }
-  .dataTime_container{
+  .dataTime_container {
     margin-left: 30px;
+  }
+  .secondPage_header{
+    background-color: #efefef;
+    padding: 10px 5px;
+  }
+  .logo {
+    font-size: 25px;
+    font-weight: bold;
+    color: #66180f;
+  }
+  .secondPage_search{
+    border: 1px solid rgb(255, 244, 241);
+    width: 300px;
+    border-radius: 10px;
+    padding-left: auto;
+    background-color: rgb(250, 250, 250);
+    padding:5px 5px;
   }
 }
 
@@ -396,33 +421,33 @@ label.title_font:hover {
 
   .header_button {
     padding-top: 5px;
-    margin-right:35px;
+    margin-right: 35px;
     font-size: 15px;
     display: block;
   }
 
-   .header_button:hover {
+  .header_button:hover {
     color: #ed4343;
     border-top: 10px solid #ed4343;
-  } 
+  }
 
-  .askbtn{
-    margin-top:15px;
+  .askbtn {
+    margin-top: 15px;
     text-decoration: none;
     font-size: 15px;
   }
   .search_mainPage {
     border: 1px solid white;
     width: 290px;
-    padding:5px 5px;
+    padding: 5px 5px;
     border-radius: 10px;
     margin-left: 40px;
     background-color: rgb(250, 250, 250);
   }
-  select{
+  select {
     font-size: 15px;
   }
-  
+
   .text {
     font-size: 30px;
   }
@@ -432,43 +457,58 @@ label.title_font:hover {
     text-align: center;
     padding: 6px 5px;
   }
-  
+
   img {
-    margin-left:1%;
+    margin-left: 1%;
   }
-  .title_font{
+  .title_font {
     font-size: 25px;
   }
-  .Questions_amount{
+  .Questions_amount {
     margin-left: 80px;
   }
-  .dataTime_container{
+  .dataTime_container {
     margin-left: 25px;
+  }
+  .secondPage_header{
+    background-color: #efefef;
+    padding: 10px 5px;
+  }
+  .logo {
+    font-size: 25px;
+    font-weight: bold;
+    color: #66180f;
+  }
+  .secondPage_search{
+    border: 1px solid rgb(255, 244, 241);
+    width: 300px;
+    border-radius: 10px;
+    padding:5px 5px;
+    background-color: rgb(250, 250, 250);
   }
 }
 
-@media only screen and (min-width: 1100px){
+@media only screen and (min-width: 1100px) {
   .search_mainPage {
     border: 1px solid white;
     width: 450px;
-    padding:5px 5px;
+    padding: 5px 5px;
     border-radius: 10px;
     margin-left: 40px;
     background-color: rgb(250, 250, 250);
   }
-  select{
+  select {
     font-size: 18px;
   }
-  .askbtn{
-    margin-top:15px;
+  .askbtn {
+    margin-top: 15px;
     text-decoration: none;
     font-size: 18px;
   }
-  .askbtn:hover{
+  .askbtn:hover {
     text-decoration: none;
   }
-  .Questions_amount{
-    margin-left:100px;
+  .Questions_amount {
+    margin-left: 100px;
   }
-
 }
