--- a/frontend/src/Components/App.css
+++ b/frontend/src/Components/App.css
@@ -42,9 +42,9 @@ select {
 }
 .secondPage_header{
   background-color: #efefef;
-  padding: 10px 5px;
-  
+  padding: 10px 5px; 
 }
+
 .logo {
   font-size: 20px;
   font-weight: bold;
@@ -52,11 +52,12 @@ select {
   padding: 2px 2px;
   margin-right: 10px;
 }
+
 .secondPage_search{
-  border: 1px solid rgb(255, 244, 241);
-  width: 200px;
+  border: 1px solid rgb(253, 253, 253);
+  width: 150px;
   border-radius: 10px;
-  padding-left: auto;
+  padding-left: 5px;
   background-color: rgb(250, 250, 250);
 }
 .plain_header {
