--- a/frontend/src/Components/App.css
+++ b/frontend/src/Components/App.css
@@ -169,7 +169,7 @@ select {
 
 .date {
   font-weight: bold;
-  color: rgb(66, 8, 8);
+  color: rgb(184, 183, 183);
 }
 
 .dataTime_container {
@@ -316,13 +316,14 @@ label.title_font:hover {
 
 .answer_box {
   background-color:white;
-  border-radius: 10px;
   width: 80%;
   overflow: auto;
+  border-top:2px solid rgb(85, 26, 26);
+  border-bottom:2px solid rgb(85, 26, 26);
 }
 
 .nameOfPerson {
-  font-size: 20px;
+  font-size: 25px;
   font-weight: bolder;
   padding-top: 10px;
   color: rgb(32, 23, 138);
@@ -340,9 +341,9 @@ label.title_font:hover {
   color: #7e898d;
   border-bottom: 1px solid rgb(200, 198, 198);
   margin-top: 4px;
-  width: 100%;
-  height: 20vh;
+  width: 80%;
   overflow: auto;
+  margin-left:30px;
 }
 
 .title_comment {
@@ -418,7 +419,14 @@ label.title_font:hover {
     background-color: rgb(250, 250, 250);
     padding:5px 5px;
   }
-}
+  /* .secondPage_timeDate{
+    /* display:flex;
+    flex-direction:row;
+    justify-content:end;
+    padding:10px;
+    margin-top:50px;
+    } */
+} */
 
 @media only screen and (min-width: 800px) {
   .search_mainPage {
@@ -520,4 +528,14 @@ label.title_font:hover {
   .Questions_amount {
     margin-left: 100px;
   }
+  .comment {
+    font-weight: bold;
+    color: #7e898d;
+    border-bottom: 1px solid rgb(200, 198, 198);
+    margin-top: 4px;
+    width: 80%;
+    overflow: auto;
+    margin-left:100px;
+  }
+  
 }
