--- a/frontend/src/Components/App.css
+++ b/frontend/src/Components/App.css
@@ -257,7 +257,7 @@ select {
 
 .question_needs_answer {
   font-size: 30px;
-  color: rgb(107, 9, 9)0);
+  color: rgb(107, 9, 9);
   text-align: center;
   font-weight: bolder;
   margin: 30px 2px;
@@ -426,7 +426,7 @@ label.title_font:hover {
     padding:10px;
     margin-top:50px;
     } */
-} */
+} 
 
 @media only screen and (min-width: 800px) {
   .search_mainPage {
