--- a/frontend/src/Components/App.css
+++ b/frontend/src/Components/App.css
@@ -544,6 +544,12 @@ label.title_font:hover {
     margin-left:100px;
   }
 .answer_form_top_text {
-  margin-left: 10%;
+  margin-left: 100px;
 }
+}
+
+@media only screen and (min-width: 1400px) {
+  .answer_form_top_text {
+    margin-left: 150px;
+  }
 }
