--- a/frontend/src/Components/App.css
+++ b/frontend/src/Components/App.css
@@ -11,11 +11,13 @@ body {
 img {
   width: 50px;
   height: 40px;
+  margin-left: 10px;
 }
 
 i {
   padding: 0px 0px;
   margin: 0px 0px;
+  font-family: "Bebas Neue", cursive;
 }
 
 label {
@@ -33,6 +35,7 @@ select {
   width: 100%;
   margin-right: auto;
 }
+
 .search_mainPage {
   border: 1px solid rgb(255, 244, 241);
   width: 180px;
@@ -40,17 +43,24 @@ select {
   border-radius: 10px;
   background-color: rgb(250, 250, 250);
 }
+
 .secondPage_header{
   background-color: #efefef;
   padding: 10px 5px; 
 }
 
 .logo {
-  font-size: 20px;
+  font-size: 18px;
   font-weight: bold;
   color: #66180f;
   padding: 2px 2px;
   margin-right: 10px;
+  padding-top: 5px;
+}
+
+.logo:hover{
+  color: #991e08;
+  cursor: pointer;
 }
 
 .secondPage_search{
@@ -60,6 +70,7 @@ select {
   padding-left: 5px;
   background-color: rgb(250, 250, 250);
 }
+
 .plain_header {
   display: flex;
   flex-flow: wrap;
@@ -67,9 +78,6 @@ select {
   width: 100%;
   margin-right: auto;
 }
-
-
-
 
 .ask_button {
   display: flex;
@@ -100,14 +108,16 @@ select {
   border-top: 1px solid #a01800;
   margin-top: 20px;
   padding-top: 10px;
-  width: 80%;
-  overflow: auto;
-  height: 300px;
+  width:80%;
+}
+.question_card:hover{
+  transform: scale(1.01);
+  box-shadow: 0px 8px 16px 0px rgba(92, 4, 4, 0.2);
 }
 
 .title_font {
   font-size: 15px;
-  color: rgb(216, 63, 36);
+  color: rgb(98, 15, 3);
   font-weight: bolder;
   margin-left: 10px;
   padding-top: 5px;
@@ -116,12 +126,14 @@ select {
 }
 
 .question_font {
-  font-size: 20px;
+  font-size: 15px;
   font-weight: bold;
   color: rgb(109, 10, 10);
-  overflow: auto;
   margin-left: 10px;
-  height: 100px;
+  text-overflow: ellipsis;
+  white-space:nowrap;
+  transition: 200ms;
+  overflow: hidden;
 }
 
 .question_font_second_page{
@@ -168,16 +180,20 @@ select {
 .date {
   font-weight: bold;
   color: rgb(184, 183, 183);
+  padding-bottom: 2px;
+  margin-bottom: 2px;
 }
 
 .dataTime_container {
   margin-left: 2px;
 }
+
 .view_container {
   display: flex;
   flex-direction: column;
   height: 8px;
 }
+
 .text {
   font-size: 15px;
   margin-top: 30px;
@@ -242,6 +258,7 @@ select {
   font-size: 12px;
   padding: 0px 0px;
 }
+
 .pagination > li > a {
   border: 1px solid #a31607;
 }
@@ -272,7 +289,7 @@ select {
 
 label.title_font:hover {
   text-decoration: none;
-  color: blue;
+  color: rgb(194, 41, 14);
   cursor: pointer;
 }
 
@@ -367,10 +384,15 @@ span.btn.btn-link.add_comment{
 }
 
 @media only screen and (min-width: 500px) and (max-width: 799px) {
+ 
   select {
     font-size: 13px;
   }
 
+  img { 
+    margin-left: 10px;
+  }
+  
   .header {
     display: flex;
     background-color: #efefef;
@@ -414,9 +436,10 @@ span.btn.btn-link.add_comment{
     padding: 10px 5px;
   }
   .logo {
-    font-size: 25px;
+    font-size: 18px;
     font-weight: bold;
     color: #66180f;
+    padding-top: 8px;
   }
   .secondPage_search{
     border: 1px solid rgb(255, 244, 241);
@@ -426,13 +449,6 @@ span.btn.btn-link.add_comment{
     background-color: rgb(250, 250, 250);
     padding:5px 5px;
   }
-  /* .secondPage_timeDate{
-    /* display:flex;
-    flex-direction:row;
-    justify-content:end;
-    padding:10px;
-    margin-top:50px;
-    } */
 } 
 
 @media only screen and (min-width: 800px) {
@@ -498,10 +514,14 @@ span.btn.btn-link.add_comment{
     background-color: #efefef;
     padding: 10px 5px;
   }
+  img{
+    margin-left: 20px;
+  }
   .logo {
     font-size: 25px;
     font-weight: bold;
     color: #66180f;
+    padding-top: 3px;
   }
   .secondPage_search{
     border: 1px solid rgb(255, 244, 241);
@@ -523,6 +543,9 @@ span.btn.btn-link.add_comment{
   }
   select {
     font-size: 18px;
+  }
+  .logo{
+    padding-top: 2px;
   }
   .askbtn {
     margin-top: 15px;
@@ -552,5 +575,8 @@ span.btn.btn-link.add_comment{
 @media only screen and (min-width: 1400px) {
   .answer_form_top_text {
     margin-left: 150px;
+  }
+  .logo{
+    padding-top: 2px;
   }
 }
