--- a/frontend/src/Components/App.css
+++ b/frontend/src/Components/App.css
@@ -1,4 +1,4 @@
-html{
+html {
   width: revert;
 }
 
@@ -44,9 +44,9 @@ select {
   background-color: rgb(250, 250, 250);
 }
 
-.secondPage_header{
+.secondPage_header {
   background-color: #efefef;
-  padding: 10px 5px; 
+  padding: 10px 5px;
 }
 
 .logo {
@@ -58,12 +58,12 @@ select {
   padding-top: 5px;
 }
 
-.logo:hover{
+.logo:hover {
   color: #991e08;
   cursor: pointer;
 }
 
-.secondPage_search{
+.secondPage_search {
   border: 1px solid rgb(253, 253, 253);
   width: 150px;
   border-radius: 10px;
@@ -108,11 +108,12 @@ select {
   border-top: 1px solid #a01800;
   margin-top: 20px;
   padding-top: 10px;
-  width:80%;
+  width: 80%;
 }
-.question_card:hover{
-  transform: scale(1.01);
+.question_card:hover {
+  transform: scale(1.03);
   box-shadow: 0px 8px 16px 0px rgba(92, 4, 4, 0.2);
+  border:none;
 }
 
 .title_font {
@@ -121,8 +122,11 @@ select {
   font-weight: bolder;
   margin-left: 10px;
   padding-top: 5px;
-  overflow: auto;
-  height: 50px;
+  height: 60px;
+  text-overflow: ellipsis;
+  width: 200px;
+  white-space: nowrap;
+  overflow: hidden;
 }
 
 .question_font {
@@ -131,18 +135,21 @@ select {
   color: rgb(109, 10, 10);
   margin-left: 10px;
   text-overflow: ellipsis;
-  white-space:nowrap;
-  transition: 200ms;
+  width:80%;
+  height: auto;
+  white-space: nowrap;
   overflow: hidden;
+  transition: 200ms;
+  overflow: auto;
 }
 
-.question_font_second_page{
+.question_font_second_page {
   font-size: 20px;
   font-weight: bold;
   color: rgb(109, 10, 10);
   overflow: auto;
   margin-left: 10px;
-  height: fit-content;
+  height: 200px;
 }
 
 .has_answers {
@@ -214,11 +221,12 @@ select {
 .form_style {
   background-color: rgb(70, 17, 17);
   border-radius: 10px;
-  color:white;
+  color: white;
 }
 
 .Answer_form {
   margin-top: 100px;
+  margin-bottom: 60px;
 }
 
 .button {
@@ -229,12 +237,12 @@ select {
   font-size: 18px;
   font-weight: bold;
   color: white;
-  background-color: #143044;
+  background-color: #441203;
 }
 
 .button:hover {
   border-radius: 8px;
-  background-color: #065794;
+  background-color: #a52a04;
   color: white;
 }
 
@@ -285,6 +293,7 @@ select {
   font-weight: bolder;
   margin: 40px;
   margin-left: 13%;
+  margin-top: 100px;
 }
 
 label.title_font:hover {
@@ -308,8 +317,12 @@ label.title_font:hover {
   color: rgb(124, 34, 27);
   font-weight: bolder;
   margin-left: 4%;
-  padding-bottom: 20px;
   margin-top: auto;
+}
+
+span.answer_form_top_text {
+  margin-bottom: 10px;
+  display: block;
 }
 
 .title_question {
@@ -320,9 +333,9 @@ label.title_font:hover {
 }
 
 .question_box {
-  border-top: 1px solid rgb(92, 17, 17);
-  border-bottom: 1px solid rgb(92, 17, 17);
-  width:50%;
+  border-top: 3px solid rgb(92, 17, 17);
+  border-bottom: 3px solid rgb(92, 17, 17);
+  width: 80%;
 }
 
 .answer_font {
@@ -331,11 +344,12 @@ label.title_font:hover {
 }
 
 .answer_box {
-  background-color:white;
+  background-color: white;
   width: 80%;
   overflow: auto;
-  border-top:2px solid rgb(85, 26, 26);
-  border-bottom:2px solid rgb(85, 26, 26);
+  height: 400px;
+  border-top: 2px solid rgb(85, 26, 26);
+  border-bottom: 2px solid rgb(85, 26, 26);
 }
 
 .nameOfPerson {
@@ -359,7 +373,7 @@ label.title_font:hover {
   margin-top: 4px;
   width: 80%;
   overflow: auto;
-  margin-left:30px;
+  margin-left: 30px;
 }
 
 .title_comment {
@@ -374,25 +388,24 @@ label.title_font:hover {
   color: #065794;
   cursor: pointer;
 }
-.comment_icon{
-  background-color:rgb(92, 4, 4);
-  color:white;
+.comment_icon {
+  background-color: rgb(92, 4, 4);
+  color: white;
 }
 
-span.btn.btn-link.add_comment{
+span.btn.btn-link.add_comment {
   margin-left: 10%;
 }
 
 @media only screen and (min-width: 500px) and (max-width: 799px) {
- 
   select {
     font-size: 13px;
   }
 
-  img { 
+  img {
     margin-left: 10px;
   }
-  
+
   .header {
     display: flex;
     background-color: #efefef;
@@ -424,6 +437,13 @@ span.btn.btn-link.add_comment{
   }
   .title_font {
     font-size: 25px;
+    color: rgb(98, 15, 3);
+    font-weight: bolder;
+    margin-left: 10px;
+    padding-top: 5px;
+    white-space: unset;
+    text-overflow: unset;
+    width: fit-content;
   }
   .Questions_amount {
     margin-left: 80px;
@@ -431,7 +451,7 @@ span.btn.btn-link.add_comment{
   .dataTime_container {
     margin-left: 30px;
   }
-  .secondPage_header{
+  .secondPage_header {
     background-color: #efefef;
     padding: 10px 5px;
   }
@@ -441,15 +461,15 @@ span.btn.btn-link.add_comment{
     color: #66180f;
     padding-top: 8px;
   }
-  .secondPage_search{
+  .secondPage_search {
     border: 1px solid rgb(255, 244, 241);
     width: 300px;
     border-radius: 10px;
     padding-left: auto;
     background-color: rgb(250, 250, 250);
-    padding:5px 5px;
+    padding: 5px 5px;
   }
-} 
+}
 
 @media only screen and (min-width: 800px) {
   .search_mainPage {
@@ -500,9 +520,15 @@ span.btn.btn-link.add_comment{
     text-align: center;
     padding: 6px 5px;
   }
-  
   .title_font {
     font-size: 25px;
+    color: rgb(98, 15, 3);
+    font-weight: bolder;
+    margin-left: 10px;
+    padding-top: 5px;
+    white-space: unset;
+    text-overflow: unset;
+    width: fit-content;
   }
   .Questions_amount {
     margin-left: 80px;
@@ -510,11 +536,11 @@ span.btn.btn-link.add_comment{
   .dataTime_container {
     margin-left: 25px;
   }
-  .secondPage_header{
+  .secondPage_header {
     background-color: #efefef;
     padding: 10px 5px;
   }
-  img{
+  img {
     margin-left: 20px;
   }
   .logo {
@@ -523,12 +549,23 @@ span.btn.btn-link.add_comment{
     color: #66180f;
     padding-top: 3px;
   }
-  .secondPage_search{
+  .secondPage_search {
     border: 1px solid rgb(255, 244, 241);
     width: 300px;
     border-radius: 10px;
-    padding:5px 5px;
+    padding: 5px 5px;
     background-color: rgb(250, 250, 250);
+  }
+  .question_font_second_page {
+    height: fit-content;
+  }
+  .answer_box {
+    background-color: white;
+    width: 80%;
+    height: fit-content;
+    overflow: unset;
+    border-top: 2px solid rgb(85, 26, 26);
+    border-bottom: 2px solid rgb(85, 26, 26);
   }
 }
 
@@ -544,7 +581,7 @@ span.btn.btn-link.add_comment{
   select {
     font-size: 18px;
   }
-  .logo{
+  .logo {
     padding-top: 2px;
   }
   .askbtn {
@@ -565,18 +602,18 @@ span.btn.btn-link.add_comment{
     margin-top: 4px;
     width: 80%;
     overflow: auto;
-    margin-left:100px;
+    margin-left: 100px;
   }
-.answer_form_top_text {
-  margin-left: 100px;
-}
+  .answer_form_top_text {
+    margin-left: 85px;
+  }
 }
 
 @media only screen and (min-width: 1400px) {
   .answer_form_top_text {
     margin-left: 150px;
   }
-  .logo{
+  .logo {
     padding-top: 2px;
   }
 }
