--- a/frontend/src/Components/App.css
+++ b/frontend/src/Components/App.css
@@ -65,7 +65,7 @@ select {
 
 .secondPage_search {
   border: 1px solid rgb(253, 253, 253);
-  width: 150px;
+  width: 100%;
   border-radius: 10px;
   padding-left: 5px;
   background-color: rgb(250, 250, 250);
@@ -128,7 +128,7 @@ select {
   height: fit-content;
   text-overflow: ellipsis;
   width: auto;
-  white-space: nowrap;
+  white-space: break-spaces;
   overflow: hidden;
   font-family: 'Fjalla One', sans-serif;
 }
@@ -232,23 +232,6 @@ select {
   margin-bottom: 60px;
 }
 
-/* .button {
-  border-radius: 8px;
-  border-color: white;
-  margin: 10px 10px;
-  padding: 5px 10px;
-  font-size: 18px;
-  font-weight: bold;
-  color: white;
-  background-color: #441203;
-}
-
-.button:hover {
-  border-radius: 8px;
-  background-color: #a52a04;
-  color: white;
-} */
-
 .header_button {
   font-size:small;
   font-weight: bold;
@@ -262,7 +245,13 @@ select {
   border-top: 10px solid #ed4343;
   text-decoration: none;
 }
-
+.ask_hover{
+  transition: 200ms;
+}
+.ask_hover:hover{
+  text-decoration:none;
+  transform: scale(1.20);
+}
 .pagination_button {
   margin-left: 2px;
   width: 8cm;
@@ -468,7 +457,7 @@ a.copyRight2{
     font-weight: bolder;
     margin-left: 10px;
     padding-top: 5px;
-    white-space: unset;
+    white-space: break-spaces;
     text-overflow: unset;
     width: fit-content;
   }
@@ -489,8 +478,8 @@ a.copyRight2{
     padding-top: 8px;
   }
   .secondPage_search {
-    border: 1px solid rgb(255, 244, 241);
-    width: 300px;
+    border-bottom: 1px solid rgb(255, 244, 241);
+    width: 400px;
     border-radius: 10px;
     padding-left: auto;
     background-color: rgb(250, 250, 250);
@@ -577,7 +566,7 @@ a.copyRight2{
   }
   .secondPage_search {
     border: 1px solid rgb(255, 244, 241);
-    width: 300px;
+    width:500px ;
     border-radius: 10px;
     padding: 5px 5px;
     background-color: rgb(250, 250, 250);
